trunk/Archive2/24/038948249c301f/output
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

.............
main.cpp:1:8: error: 'BaseT' is not a class template
 struct BaseT< template int X >
        ^
main.cpp:6:22: error: expected template-name before '<' token
 struct Derive : BaseT<42>
                      ^
main.cpp:6:22: error: expected '{' before '<' token
main.cpp:6:22: error: expected unqualified-id before '<' token
............
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
.............
main.cpp:1:15: error: expected expression
struct BaseT< template int X >
              ^
main.cpp:1:8: error: explicit specialization of non-template struct 'BaseT'
struct BaseT< template int X >
       ^
main.cpp:6:17: error: unknown template name 'BaseT'
struct Derive : BaseT<42>
                ^
main.cpp:8:18: error: use of undeclared identifier 'foo'
    void bar() { foo(); }
                 ^
4 errors generated.
