trunk/Archive2/24/038948249c301f/main.cpp
struct BaseT< template int X >
{
    void foo() { }
};

struct Derive : BaseT<42>
{
    void bar() { foo(); }
};

int main()
{
}
